v0.7.2
 - added a fix to prevent coredump on cookie usage when the cookie is DISABLED (iwdisb)
v0.7.1
 - merged in freebsd patches by iwdisb ( http://mobilcom.dyndns.org/~iwdisb/glftpd/ )
    this undo the previous DOUBLE-SFV patch. iwdisb had imho a better solution - check the sfv
    uploaded and decide if it's a better one to use than the previous (transparent/silent)
 - merged in nfo_script patch by psxc ( http://www.glftpd.at )
 - crc.c modified by psxc ( crc table stolen from http://www.fodder.org/cksfv/ )
    this should help people who get crc errors on large files.
 - static compile added - needed for fbsd and obsd
 - glftpd2 support (ONLINE struct changed in object.h).

---- 20040428 - Project-ZS is now supported again. Development concentrate on support
---- for the new glftpd2. daxxar/psxc takes responsibility, but welcome anyone who
---- wish to contribute! :) (contact psxc or daxxar @ #glftpd / #project-zs on EFNet)
----
---- BELOW IS DAXXARS CHANGELOG FOR "DAXPATCH"! (merged with TNG)

v0.4 daxpatch - 15th Apr. 2004
 - fixed a error with the time-cookie (%d); it would fuck up output, *hrhr*
 - added vbr-support (from http://zs.fatty.dk/)
 (sorry for the lack of updates; i've lost all my sites,
  so scripting doesn't really get as much priority as it should
  when i havn't got any sites to script ;-)
 
v0.3 daxpatch
 - added support for 256 files in an SFV (100 before) (jeez, who needs 1024? *poke turbo* ;) 
 - added sitewho to packaging (thanks for the idea, turbo)
 - started working on dZSbot, (separated config from script)
   see sitebot/CHANGELOG for all changes :)
 - fixed typo in scripts/getnfo/imdbmessage.tml

v0.2 daxpatch
 - fixed typo in config.h ;)
 - fixed extra space after time-cookie (%d)

v0.1 daxpatch
 - added a fixed dualsfv option (two sfvs in one releasedir is disallowed)
   (this version allows you to delete sfv and upload another)
 - support for 4gb+ releases
 - limiter of "newleader spam"
