@@ -32,25 +32,13 @@ struct ONLINE {
  char				tagline[64];	/* The users tagline */
  char   			username[24];	/* The username of the user */
  char				status[256];	/* The status of the user, idle, RETR, etc */
-
-#if (for_glftpd2 == TRUE)
- short  int			ssl_flag;		/* 0 = no ssl, 1 = ssl on control, 2 = ssl on control and data */
-#endif
-
- char				host[256];		/* The host the user is comming from (with ident) */
+ char				host[256];	/* The host the user is comming from (with ident) */
  char				currentdir[256];/* The users current dir (fullpath) */
- long				groupid;		/* The groupid of the users primary group */
- time_t				login_time;		/* The login time since the epoch (man 2 time) */
- struct timeval		tstart;			/* Replacement for last_update. */
-
-#if (for_glftpd2 == TRUE)
- struct timeval		txfer;			/* The time of the last successful transfer. */
- unsigned long long	bytes_xfer;		/* Bytes transferred this far. */
-#else 
- unsigned long		bytes_xfer;		/* Bytes transferred this far. */
-#endif
-
- pid_t				procid;			/* The processor id of the process */
+ long				groupid;	/* The groupid of the users primary group */
+ time_t				login_time;	/* The login time since the epoch (man 2 time) */
+ struct timeval			tstart;		/* Replacement for last_update. */
+ unsigned long			bytes_xfer;	/* Bytes transferred this far. */
+ pid_t				procid;		/* The processor id of the process */
 };
 
 
